--- a/public/CSS Flags/style.css
+++ b/public/CSS Flags/style.css
@@ -116,3 +116,25 @@ div.Sweden-flag > div > div {
   height: 15%;
   width: 900%;
 }
+
+/*Flag of Hungary*/
+div.Hungary-flag {
+  background-color: red;
+  height: 150px;
+  width: 225px;
+  margin-top: 10px;
+}
+div.Hungary-flag > div {
+  background-color: white;
+  margin-top: 50px;
+  height: 50px;
+  width: 100%;
+  position: relative;
+}
+div.Hungary-flag > div > div {
+  background-color: green;
+  margin-top: 50px;
+  height: 50px;
+  width: 100%;
+  position: absolute;
+}
