--- a/public/CSS Flags/style.css
+++ b/public/CSS Flags/style.css
@@ -168,3 +168,25 @@ div.UAE-flag > div > div > div {
   width: 100%;
   position: absolute;
 }
+
+/*Flag of Thailand*/
+div.Thailand-flag {
+  background-color: red;
+  height: 150px;
+  width: 225px;
+  margin-top: 10px;
+}
+div.Thailand-flag > div {
+  background-color: white;
+  margin-top: 25px;
+  height: 100px;
+  width: 100%;
+  position: relative;
+}
+div.Thailand-flag > div > div {
+  background-color: rgb(34, 10, 80);
+  margin-top: 25px;
+  height: 50px;
+  width: 100%;
+  position: absolute;
+}
